sdk_tests/tests/pbc_contract_codegen/fail/state_macro_not_on_fn.rs
#![no_main]
use pbc_contract_codegen::state;

#[state]
pub fn main() {}
