sdk_tests/tests/pbc_contract_codegen/fail/state_macro_not_on_fn.stderr
error: custom attribute panicked
 --> tests/pbc_contract_codegen/fail/state_macro_not_on_fn.rs:4:1
  |
4 | #[state]
  | ^^^^^^^^
  |
  = help: message: not implemented: The state attribute is only valid for structs.
